Export maven opts